--- a/play.pokemonshowdown.com/style/client2.css
+++ b/play.pokemonshowdown.com/style/client2.css
@@ -730,7 +730,6 @@ p.or:after {
 	bottom: 0;
 	left: 0;
 	padding: 0 0 15px 20px;
-	line-height: 1.4;
 	color: #BBBBBB;
 	text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black;
 }
